+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.6 beta 1?
================================

*Release date: XX-June-2008*

Core and Builtins
-----------------

- Issue #2831: enumerate() now has a ``start`` argument.

- Issue #2801: fix bug in the float.is_integer method where a ValueError
  was sometimes incorrectly raised.

- Issue #2790: sys.flags was not properly exposing its bytes_warning attribute.

- Issue #2196: hasattr now lets exceptions which do not inherit Exception
  (KeyboardInterrupt, and SystemExit) propagate instead of ignoring them

Extension Modules
-----------------

- Support for Windows 9x has been removed from the winsound module.

- bsddb module updated to version 4.6.4.

Library
-------

- The WAIT module from IRIX has been deprecated for removal in Python 3.0.

- The torgb module from IRIX has been deprecated for removal in Python 3.0.

- The SV module from IRIX has been deprecated for removal in Python 3.0.

- The readcd module from IRIX has been deprecated for removal in Python 3.0.

- The panelparser module from IRIX has been deprecated for removal in
  Python 3.0.

-The panel module from IRIX has been deprecated for removal in Python 3.0.

- The jpeg module from IRIX has been deprecated for removal in Python 3.0.

- The IOCTL module from IRIX has been deprecated for removal in Python 3.0.

- The IN module from IRIX has been deprecated for removal in Python 3.0.

- The imgfile module from IRIX has been deprecated for removal in Python 3.0.

- The GLWS module from IRIX has been deprecated for removal in Python 3.0.

- The GET module from IRIX has been deprecated for removal in Python 3.0.

- The fm module from IRIX has been deprecated for removal in Python 3.0.

- The FL, flp, and fl modules from IRIX have been deprecated for removal in
  Python 3.0.

- The FILE module on IRIX has been deprecated for removal in Python 3.0.
